Select de prioridades

--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -111,7 +111,7 @@
                 <td>
                     <div class="form-group">                        
                         <select id="usuarioSelect_@item.ID_Orden_Trabajo_Pk" class="formControl" data-division-id="@item.ID_Division_Fk">
-                            <option hidden selected value="">Seleccione usuario</option>
+                            <option hidden selected value="">Seleccione usuario a asignar</option>
                         </select>
                     </div>
                 </td>
