--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -127,7 +127,7 @@
         }
     </tbody>
 </table>
-<a class="btn-action" asp-page="./Menu">Volver al Menu</a>
+<a class="btn-action" asp-page="Administradores/Menu">Volver al Menu</a>
 <button id="btnExportar">Exportar Excel</button>
 
 
@@ -165,6 +165,7 @@
         $btnExportar.addEventListener("click", function () {
             let tableExport = new TableExport($tabla, {
                 exportButtons: false, // No queremos botones adicionales
+                ignoreColumns: [12, 13],
                 filename: "Reporte de Peticiones de Trabajo", // Nombre del archivo de Excel
                 sheetname: "Peticiones", // Título de la hoja
             });
