--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -127,7 +127,7 @@
         }
     </tbody>
 </table>
-<a class="btn-action" asp-page="Administradores/Menu">Volver al Menu</a>
+<a class="btn-action" asp-page="/Administradores/Menu">Volver al Menu</a>
 <button id="btnExportar">Exportar Excel</button>
 
 
