--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -173,7 +173,7 @@
     }
 
         button:hover {
-            background-color: #002e5d;
+            background-color: #4caf50;
             transform: translateY(-2px);
         }
 
