--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -8,52 +8,45 @@
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Admin.ID_Usuario_Pk" />
-
     <div class="form-group">
         <label asp-for="Admin.Nombre" class="control-label"></label>
         <input asp-for="Admin.Nombre" class="form-control" />
         <span asp-validation-for="Admin.Nombre" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.Apellido" class="control-label"></label>
         <input asp-for="Admin.Apellido" class="form-control" />
         <span asp-validation-for="Admin.Apellido" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.DNI" class="control-label"></label>
         <input asp-for="Admin.DNI" class="form-control" />
         <span asp-validation-for="Admin.DNI" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.Numero_Control" class="control-label"></label>
         <input asp-for="Admin.Numero_Control" class="form-control" />
         <span asp-validation-for="Admin.Numero_Control" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.Correo" class="control-label"></label>
         <input asp-for="Admin.Correo" class="form-control" />
         <span asp-validation-for="Admin.Correo" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.ID_Division_Fk" class="control-label"></label>
         <select asp-for="Admin.ID_Division_Fk"
                 asp-items="Model.Divisions.Select(d => new SelectListItem
-                {
-                    Value = d.ID_Division_Pk.ToString(),
-                    Text = d.Descripcion_Division
-                })"
+                        {
+                            Value = d.ID_Division_Pk.ToString(),
+                            Text = d.Descripcion_Division
+                        })"
                 id="deptSelect"
                 class="formControl">
             <option hidden selected value="">Seleccione el Organismo</option>
         </select>
         <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.ID_Servicio_Fk" id="servicioLabel" class="control-label"></label>
         <select asp-for="Admin.ID_Servicio_Fk" id="servicioSelect" class="formControl" required>
@@ -61,7 +54,6 @@
         </select>
         <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <label asp-for="Admin.ID_Rol_Fk" class="control-label"></label>
         <select asp-for="Admin.ID_Rol_Fk"
@@ -71,7 +63,6 @@
         </select>
         <span asp-validation-for="Admin.ID_Rol_Fk" class="text-danger"></span>
     </div>
-
     <div class="form-group">
         <input type="submit" value="Guardar" class="btn btn-primary" />
     </div>
@@ -79,6 +70,7 @@
 <div class="centered-button">
     <a asp-page="./Index" class="btn-action">Volver a la Lista</a>
 </div>
+
 
 @section Scripts {
     @{
@@ -124,7 +116,7 @@
             }
         });
     </script>
-
+    t
     <style>
         body {
             background-color: #e0e8f1;
@@ -146,6 +138,7 @@
                 background-color: #002e5d;
                 transform: translateY(-2px);
             }
+
 
         input[type=submit] {
             display: inline-block;
@@ -183,7 +176,28 @@
             font-weight: bold;
         }
 
+        .submit {
+            background-color: #003d6b;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+            .submit:hover {
+                background-color: #002e5d;
+            }
+
         h4 {
+            color: #003d6b;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        asap-for {
             color: #003d6b;
             margin-top: 20px;
             margin-bottom: 10px;
@@ -198,11 +212,71 @@
             font-weight: bold;
         }
 
+        .custom-textarea {
+            width: 100%;
+            height: 150px;
+            resize: none;
+        }
+
+        a.btn-action:hover {
+            background-color: #002e5d; /* Color en hover */
+            transform: translateY(-2px);
+        }
+
+        label,
+        input[type="text"],
+        select,
+        .submit,
+        h4 {
+            font-size: 1em;
+            font-weight: bold;
+            color: #003d6b; /* Asegurarte de que las etiquetas label y h4 compartan el mismo color */
+        }
+
+        input[type="number"],
+        select,
+        .submit,
+        h4 {
+            font-size: 1em;
+            font-weight: bold;
+        }
+
+        input[type="password"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
+        input[type="text"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
+        input[type="number"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
         .centered-button {
             display: flex;
             margin-top: 20px;
             align-items: center;
             justify-content: center;
         }
+
     </style>
 }
