--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -101,20 +101,86 @@
             @Html.DisplayFor(model => model.PedidoTrabajo.Numero_Oficina_PT)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PedidoTrabajo.Estado.Descripcion_Estado)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Prioridad_Fk)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PedidoTrabajo.ID_Prioridad_Fk)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PedidoTrabajo.Estado.Descripcion_Estado)
+            <button id="modalEstado">Cambiar estado</button>
+        </dd>
     </dl>
+    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form method="post" asp-page-handler="ModiEstado">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="confirmModalLabel">Cambiar Estado</h5>
+                    </div>  
+                    <div class="modal-content">
+                        <label asp-for="PedidoTrabajo.ID_Estado_Fk" class="control-label"></label>
+                        <select asp-for="PedidoTrabajo.ID_Estado_Fk"
+                                asp-items="Model.Estado.Select(d=> new SelectListItem
+                                {
+                                    Value = d.ID_Estado_PK.ToString(),
+                                    Text = d.Descripcion_Estado.ToString()
+                                })"
+                                id="deptSelect"
+                                class="formControl">
+                            <option hidden selected value="">model.PedidoTrabajo.Estado.Descripcion_Estado</option>
+                        </select>                        
+                        <input type="date" id="fechaEstimadaFin"/>
+                        <input type="date" id="fechaInicioSuspendido"/>
+                        <textarea class="form-control custom-textarea" id="textBoxCancel"></textarea>
+                        <span asp-validation-for="PedidoTrabajo.ID_Estado_Fk" class="text-danger"></span>                    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Aceptar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div> <!-- VENTANA MODAL -->
 </div>
 <div>
     @*<a asp-page="./Edit" asp-route-id="@Model.Pelicula.Id">Edit</a> |*@
     <a asp-page="./Index">Back to List</a>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#fechaEstimadaFin').hide()
+        $('#fechaInicioSuspendido').hide();
+        $('#textBoxCancel').hide();
+        
+        $('#modalEstado').click(function () {            
+            $('#confirmModal').modal('show');
+        });
+        $('#cancelaAsignacion').click(function () {
+            $('#confirmModal').modal('hide');
+        });
+
+        $('#dependenciaLabel').hide();
+        $('#dependenciaSelect').hide();
+
+        $('#deptSelect').change(function () {
+            var selectedEstado = $(this).val();
+            // 3 CASOS:
+            // 1) EL ADMINISTRADOR DECIDE PONER ESTADO FINALIZADO: 
+            // ESTO HARA QUE EN LA BASE DE DATOS SE ACTUALICE LA FECHA DE FIN.
+            // SE DEBERA LIBERAR AL OPERADOR DE LA ORDEN DE TRABAJO
+            // 2) EL ADMINISTRADOR DECIDE PONER ESTADO SUSPENDIDO:
+            // ESTO HARA QUE EN LA BASE DE DATOS SE ACTULICE LA FECHA DE SUSPENDIDO Y FECHA ESTIMADA DE REANUDACION DE OBRA
+            // 3) EL ADMINISTRADOR DECIDE CANCELAR LA TAREA, ESTO HARÁ QUE SE TENGRA QUE PONER FECHA DE FIN 
+            // Y ADEMAS COLOCAR MOTIVO DE LA SUSPENSION EN UN CUADRO DE TEXTO
+            if (selectedEstado) {
+                console.log(selectedEstado);
+            }
+        });
+    });
+</script>
